--- a/dada/templates/view_list_viewport_widget.tmpl
+++ b/dada/templates/view_list_viewport_widget.tmpl
@@ -152,7 +152,7 @@
 
 	<!-- /tmpl_if -->
 
-	<!-- tmpl_if EXPR="(type eq 'sub_request_list')" -->
+	<!-- tmpl_if EXPR="(type eq 'unsub_request_list')" -->
 
 		 <input type="hidden" name="f"        value="unsubscription_requests" />
 		 <input type="hidden" name="type"     value="<!-- tmpl_var type -->" />
