--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -749,18 +749,18 @@ editors also have the ability to make simple HTML tables for basic layouts.
 	</p>
 
 	<p>
-		<input type="checkbox" name="wysiwyg_editor_install_fckeditor" id="wysiwyg_editor_install_fckeditor" value="1"/>			
+		<input type="checkbox" name="wysiwyg_editor_install_fckeditor" id="wysiwyg_editor_install_fckeditor" value="1"/>
 	<label for="wysiwyg_editor_install_fckeditor">Install FCKeditor (Not Recommended)</label>
 	</p>
 		
 	<h2>File Browsers/Uploaders</h2>
 
 	<p>
-		<input type="radio" name="file_browser_install" id="file_browser_install_kcfinder" value="kcfinder" checked="checked"/>			
+		<input type="radio" name="file_browser_install" id="file_browser_install_kcfinder" value="kcfinder" checked="checked"/>
 		<label for="file_browser_install_kcfinder">Install KCFinder</label>
 	</p>
 	<p>
-		<input type="radio" name="file_browser_install" id="file_browser_install_core5_filemanager" value="core5_filemanager" checked="checked"/>			
+		<input type="radio" name="file_browser_install" id="file_browser_install_core5_filemanager" value="core5_filemanager"/>
 		<label for="file_browser_install_core5_filemanager">Install Core Five FileManager</label>
 	</p>
 	<input type="hidden" name="core5_filemanager_connector" value="pl" /> 
