--- a/dada/templates/html_message_form_field_widget.tmpl
+++ b/dada/templates/html_message_form_field_widget.tmpl
@@ -20,6 +20,7 @@
 	<!-- /tmpl_if --> 
 	
 	<!-- tmpl_if using_tiny_mce --> 
+		<div id="using_tinymce"></div> 
 		<textarea name="html_message_body" cols="80" rows="30" id="html_message_body" class="html_message_body"><!-- tmpl_var html_message_body_content  escape="HTML" --></textarea>					
 	<!-- /tmpl_if --> 
 	<!-- tmpl_if using_no_wysiwyg_editor -->
