--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -52,7 +52,7 @@
 		<script src="<!-- tmpl_var CKEDITOR_URL -->/adapters/jquery.js"  type="text/javascript"></script>
 	<!-- /tmpl_if --> 
 	<!-- tmpl_if using_tiny_mce --> 
-		<script src="<!-- tmpl_var TINY_MCE_URL -->/tiny_mce.js"         type="text/javascript"></script>
+		<script src="<!-- tmpl_var TINY_MCE_URL -->/tinymce.min.js"         type="text/javascript"></script>
 		<script src="<!-- tmpl_var TINY_MCE_URL -->/dada_mail_config.js" type="text/javascript"></script>
 	<!-- /tmpl_if -->
 <!-- /tmpl_if --> 
