--- a/dada/installer-disabled/templates/tinymce_config_js.tmpl
+++ b/dada/installer-disabled/templates/tinymce_config_js.tmpl
@@ -1,5 +1,7 @@
+tinymce.init({
+
 <!-- tmpl_if kcfinder_enabled --> 
-	function openKCFinder(field_name, url, type, win) {
+	file_browser_callback: function(field_name, url, type, win) { 
 	    tinyMCE.activeEditor.windowManager.open({
 	        file           : '<!-- tmpl_var file_manager_browse_url -->?opener=tinymce&type=' + type,
 	        title          : 'KCFinder',
@@ -13,24 +15,21 @@
 	        window : win,
 	        input  : field_name
 	    });
-	    return false;
-	}
-<!-- /tmpl_if --> 
-
+	    return false;		
+	},
+<!-- /tmpl_if -->
 <!-- tmpl_if core5_filemanager_enabled --> 
-
-	function openCore5_filemanager(field_name, url, type, win) { 
-    
-          // from http://andylangton.co.uk/blog/development/get-viewport-size-width-and-height-javascript
-          var w = window,
-          d = document,
-          e = d.documentElement,
-          g = d.getElementsByTagName('body')[0],
-          x = w.innerWidth || e.clientWidth || g.clientWidth,
-          y = w.innerHeight|| e.clientHeight|| g.clientHeight;
+	file_browser_callback: function(field_name, url, type, win) { 
+	    // from http://andylangton.co.uk/blog/development/get-viewport-size-width-and-height-javascript
+	    var w = window,
+	    d = document,
+	    e = d.documentElement,
+	    g = d.getElementsByTagName('body')[0],
+	    x = w.innerWidth || e.clientWidth || g.clientWidth,
+	    y = w.innerHeight|| e.clientHeight|| g.clientHeight;
 
 	    var cmsURL = '<!-- tmpl_var file_manager_browse_url -->?&field_name='+field_name+'&lang='+tinymce.settings.language;
-    
+
 	    if(type == 'image') {		    
 	    	cmsURL = cmsURL + "&type=images";
 	    }
@@ -42,18 +41,8 @@
 	        height : y * 0.8,
 	        resizable : "yes",
 	        close_previous : "no"
-	    });   
-	}
-<!-- /tmpl_if --> 
-
-
-tinymce.init({
-
-<!-- tmpl_if kcfinder_enabled --> 
-	file_browser_callback           : "openKCFinder",
-<!-- /tmpl_if -->
-<!-- tmpl_if core5_filemanager_enabled --> 
-	file_browser_callback           : "openCore5_filemanager",
+		});   
+	},
 <!-- /tmpl_if -->
 
 
