--- a/dada/templates/edit_archived_msg.tmpl
+++ b/dada/templates/edit_archived_msg.tmpl
@@ -6,7 +6,15 @@
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
-		<!-- tmpl_var title --> 
+		Message Archives 
+		&#187; 
+		<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=view_archive">
+			View Archive
+		</a>
+		 &#187;
+		<!-- tmpl_var name="subject" ESCAPE="HTML" -->
+		 &#187;
+		Edit
 	</div> 
 	<!-- tmpl_include help_link_widget.tmpl -->
 </div>
