--- a/dada/templates/view_archive_screen.tmpl
+++ b/dada/templates/view_archive_screen.tmpl
@@ -5,7 +5,13 @@
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
-		<!-- tmpl_var title --> 
+		Message Archives 
+		&#187; 
+		<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=view_archive">
+			View Archive
+		</a>
+		 &#187;
+		<!-- tmpl_var name="subject" ESCAPE="HTML" -->
 	</div> 
 	<!-- tmpl_include help_link_widget.tmpl -->
 </div>
