--- a/dada/installer-disabled/templates/tinymce_config_js.tmpl
+++ b/dada/installer-disabled/templates/tinymce_config_js.tmpl
@@ -1,53 +1,70 @@
 tinymce.init({
 
 <!-- tmpl_if kcfinder_enabled --> 
-	file_browser_callback: function(field_name, url, type, win) { 
-	    tinyMCE.activeEditor.windowManager.open({
-	        file           : '<!-- tmpl_var file_manager_browse_url -->?opener=tinymce&type=' + type,
-	        title          : 'KCFinder',
-	        width          : 700,
-	        height         : 500,
-	        resizable      : "yes",
-	        inline         : true,
-	        close_previous : "no",
-	        popup_css      : false
-	    }, {
-	        window : win,
-	        input  : field_name
-	    });
-	    return false;		
-	},
+    file_browser_callback: function(field_name, url, type, win) { 
+        tinyMCE.activeEditor.windowManager.open({
+            file           : '<!-- tmpl_var file_manager_browse_url -->?opener=tinymce&type=' + type,
+            title          : 'KCFinder',
+            width          : 700,
+            height         : 500,
+            resizable      : "yes",
+            inline         : true,
+            close_previous : "no",
+            popup_css      : false
+        }, {
+            window : win,
+            input  : field_name
+        });
+        return false;        
+    },
 <!-- /tmpl_if -->
 <!-- tmpl_if core5_filemanager_enabled --> 
-	file_browser_callback: function(field_name, url, type, win) { 
-	    // from http://andylangton.co.uk/blog/development/get-viewport-size-width-and-height-javascript
-	    var w = window,
-	    d = document,
-	    e = d.documentElement,
-	    g = d.getElementsByTagName('body')[0],
-	    x = w.innerWidth || e.clientWidth || g.clientWidth,
-	    y = w.innerHeight|| e.clientHeight|| g.clientHeight;
+    file_browser_callback: function(field_name, url, type, win) { 
+        // from http://andylangton.co.uk/blog/development/get-viewport-size-width-and-height-javascript
+        var w = window,
+        d = document,
+        e = d.documentElement,
+        g = d.getElementsByTagName('body')[0],
+        x = w.innerWidth || e.clientWidth || g.clientWidth,
+        y = w.innerHeight|| e.clientHeight|| g.clientHeight;
 
-	    var cmsURL = '<!-- tmpl_var file_manager_browse_url -->?&field_name='+field_name+'&lang='+tinymce.settings.language;
+        var cmsURL = '<!-- tmpl_var file_manager_browse_url -->?&field_name='+field_name+'&lang='+tinymce.settings.language;
 
-	    if(type == 'image') {		    
-	    	cmsURL = cmsURL + "&type=images";
-	    }
+        if(type == 'image') {            
+            cmsURL = cmsURL + "&type=images";
+        }
 
-	    tinyMCE.activeEditor.windowManager.open({
-	        file : cmsURL,
-	        title : 'Filemanager',
-	        width : x * 0.8,
-	        height : y * 0.8,
-	        resizable : "yes",
-	        close_previous : "no"
-		});   
-	},
+        tinyMCE.activeEditor.windowManager.open({
+            file : cmsURL,
+            title : 'Filemanager',
+            width : x * 0.8,
+            height : y * 0.8,
+            resizable : "yes",
+            close_previous : "no"
+        });   
+    },
 <!-- /tmpl_if -->
 
-
-    selector: "textarea#html_message_body",
-
+    selector:              "textarea#html_message_body",
+    height:                "30em", 
+    image_advtab :          true,
+    paste_data_images :     true,
+    convert_fonts_to_spans : true,
+    element_format :         "xhtml",
+    entity_encoding :        "names",
+    keep_styles:             true,
+    protect: [
+         /<\?dada.*?\?>/g
+     ],
+     visual: true, 
+     convert_urls: false, 
+     relative_urls: false,
+     document_base_url :     "<!-- tmpl_var support_files_dir_url -->/<!-- tmpl_var Support_Files_Dir_Name -->/",
+     remove_script_host: false, 
+     visualblocks_default_state: true,
+    
+    
+    
     plugins: [
         "advlist autolink lists link image charmap preview hr anchor ",
         "searchreplace wordcount visualblocks visualchars code fullscreen",
@@ -55,14 +72,7 @@ tinymce.init({
         "emoticons paste textcolor"
     ],
 
-    image_advtab: true,
-    paste_data_images: true,
-	
-	
-    toolbar1: "undo redo  | bold italic underline strikethrough | alignleft aligncenter alignright alignjustify | styleselect | bullist numlist outdent indent | link image",
-    toolbar2: "preview | forecolor backcolor emoticons code",
-	
-	
-    document_base_url               : "<!-- tmpl_var support_files_dir_url -->/<!-- tmpl_var Support_Files_Dir_Name -->/"
-	
+    toolbar1 : "undo redo  | bold italic underline strikethrough | alignleft aligncenter alignright alignjustify | styleselect | bullist numlist outdent indent | link image",
+    toolbar2 : "preview | forecolor backcolor emoticons code"
+    
  });
