Here's the "Tags" pulldown list.

--- a/dada/installer-disabled/templates/ckeditor_config_js.tmpl
+++ b/dada/installer-disabled/templates/ckeditor_config_js.tmpl
@@ -3,6 +3,7 @@ Copyright (c) 2003-2012, CKSource - Frederico Knabben. All rights reserved.
 For licensing, see LICENSE.html or http://ckeditor.com/license
 */
 
+
 CKEDITOR.editorConfig = function(config) {
    config.filebrowserBrowseUrl      = '<!-- tmpl_var file_manager_browse_url -->?type=files';
    config.filebrowserImageBrowseUrl = '<!-- tmpl_var file_manager_browse_url -->?type=images';
@@ -11,19 +12,24 @@ CKEDITOR.editorConfig = function(config) {
    config.filebrowserImageUploadUrl = '<!-- tmpl_var file_manager_upload_url -->?type=images';
    config.filebrowserFlashUploadUrl = '<!-- tmpl_var file_manager_upload_url -->?type=flash';
 
-	config.toolbar_DadaMail_Admin =
-	[
-		{ name: 'basicstyles',	items : [ 'Bold','Italic','Underline','Strike','Subscript','Superscript','-','RemoveFormat' ] },
-		{ name: 'styles',		items : [ 'Styles','Format','Font','FontSize' ] },
-		{ name: 'colors',		items : [ 'TextColor','BGColor' ] },
-		'/',
-		{ name: 'paragraph',	items : [ 'NumberedList','BulletedList','-','Outdent','Indent','-','Blockquote','CreateDiv','-','JustifyLeft','JustifyCenter','JustifyRight','JustifyBlock','-','BidiLtr','BidiRtl' ] },
-		{ name: 'links',		items : [ 'Link','Unlink','Anchor' ] },
-		{ name: 'insert',		items : [ 'Image','Table','HorizontalRule','Smiley','SpecialChar' ] },
+    config.height = '30em';
 
-		'/',
-		{ name: 'clipboard',	items : [ 'Cut','Copy','Paste','PasteText','PasteFromWord','-','Undo','Redo' ] },
-		{ name: 'editing',		items : [ 'Find','Replace','-','SelectAll','-','SpellChecker', 'Scayt' ] },
-		{ name: 'document',		items : [ 'Source','Maximize', 'ShowBlocks'] },
-	];
+    config.strinsert_button_label                                 = 'Tags';
+    config.strinsert_button_title = config.strinsert_button_voice = 'Tags';
+    config.extraPlugins                                           = 'strinsert';
+
+    config.toolbar_DadaMail_Admin =
+    [
+        { name: 'basicstyles',    items : [ 'strinsert', 'Bold','Italic','Underline','Strike','Subscript','Superscript','-','RemoveFormat' ] },
+        { name: 'styles',         items : [ 'Styles','Format','Font','FontSize' ] },
+        { name: 'colors',         items : [ 'TextColor','BGColor' ] },
+        '/',
+        { name: 'paragraph',      items : [ 'NumberedList','BulletedList','-','Outdent','Indent','-','Blockquote','CreateDiv','-','JustifyLeft','JustifyCenter','JustifyRight','JustifyBlock','-','BidiLtr','BidiRtl' ] },
+        { name: 'links',          items : [ 'Link','Unlink','Anchor' ] },
+        { name: 'insert',         items : [ 'Image','Table','HorizontalRule','Smiley','SpecialChar' ] },
+        '/',
+        { name: 'clipboard',      items : [ 'Cut','Copy','Paste','PasteText','PasteFromWord','-','Undo','Redo' ] },
+        { name: 'editing',        items : [ 'Find','Replace','-','SelectAll','-','SpellChecker', 'Scayt' ] },
+        { name: 'document',       items : [ 'Source','Maximize', 'ShowBlocks'] },
+    ];
 };
