some tweaks to the config.

--- a/dada/installer-disabled/templates/ckeditor_config_js.tmpl
+++ b/dada/installer-disabled/templates/ckeditor_config_js.tmpl
@@ -14,6 +14,8 @@ CKEDITOR.editorConfig = function(config) {
 
     config.height = '30em';
 
+    config.startupOutlineBlocks = true;  
+    
     config.strinsert_button_label                                 = 'Tags';
     config.strinsert_button_title = config.strinsert_button_voice = 'Tags';
     config.extraPlugins                                           = 'strinsert';
