--- a/dada/templates/subscription_options_screen.tmpl
+++ b/dada/templates/subscription_options_screen.tmpl
@@ -49,9 +49,9 @@
 	<!--/tmpl_if--> 
 
 
-<table cellpadding="5">
+<table width="100%">
  <tr>
-  <td>
+  <td width="20">
    <p>
     <input type="checkbox" name="use_subscription_quota" id="use_subscription_quota" value="1" <!-- tmpl_if list_settings.use_subscription_quota -->checked="checked"<!--/tmpl_if--> />
    </p>
@@ -65,7 +65,7 @@
   </td>
  </tr>
  <tr>
-  <td>
+  <td  width="20">
    <p>&nbsp;</p>
   </td>
   <td>
