Getting ready for stable release!

--- a/dada/templates/plugins/bridge/default.tmpl
+++ b/dada/templates/plugins/bridge/default.tmpl
@@ -391,7 +391,7 @@ General
 
 <fieldset> 
  <legend> 
- Announce Only List Options
+ Announce-Only List Options
  </legend> 
 
 
@@ -629,7 +629,7 @@ General
 
 				<div class="buttonfloat"> 
 				  <input type="button"  class="processing view_moderators" value="View Moderators (<!-- tmpl_var moderators_count -->)"  />
-				  <input type="button" class="processing add_moderators" value="Add Moderatrs" <!-- tmpl_unless list_settings.enable_moderation -->disabled="disabled"<!-- /tmpl_unless --> />
+				  <input type="button" class="processing add_moderators" value="Add Moderatrs" />
 				 </div> 
 				 <div class="floatclear"></div> 
 
@@ -753,8 +753,8 @@ General
 		</p>
 
 			<div class="buttonfloat"> 
-			  <input type="button"  class="processing view_authorized_senders" value="View Authorized Senders (<!-- tmpl_var authorized_senders_count -->)" disabled="disabled" />
-			  <input type="button" class="processing add_authorized_senders" value="Add Authorized Senders" <!-- tmpl_unless list_settings.enable_authorized_sending -->disabled="disabled"<!-- /tmpl_unless --> />
+			  <input type="button"  class="processing view_authorized_senders" value="View Authorized Senders (<!-- tmpl_var authorized_senders_count -->)" />
+			  <input type="button" class="processing add_authorized_senders" value="Add Authorized Senders" />
 			 </div> 
 			 <div class="floatclear"></div> 
 	    </td> 
